fixed truncation issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -148,3 +148,8 @@ div.notice {
   padding-left: 0.9em;
   margin: 0.5em;
 }
+
+#page_content {
+  padding: 0.5em;
+}
+
